<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="enter_email">Enter e-mail</string>
    <string name="enter_password">Enter password</string>
    <string name="login_button">LogIn</string>
    <string name="dont_have_account">Register</string>
    <string name="enter_name">Enter name</string>
    <string name="register_button">Register</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_register_group">RegisterGroupActivity</string>
</resources>